--- a/CodeGoesHere/Budgeter/templates/index.html
+++ b/CodeGoesHere/Budgeter/templates/index.html
@@ -6,21 +6,20 @@
 -->
 <html lang="en">
 	<head>
+		{% load static %}
 		<meta charset="UTF-8">
 		<title>Transit by TEMPLATED</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
 		<!--[if lte IE 8]><script src="js/html5shiv.js"></script><![endif]-->
-		<script src="js/jquery.min.js"></script>
-		<script src="js/skel.min.js"></script>
-		<script src="js/skel-layers.min.js"></script>
-		<script src="js/init.js"></script>
-		<noscript>
-			<link rel="stylesheet" href="css/skel.css" />
-			<link rel="stylesheet" href="css/style.css" />
-			<link rel="stylesheet" href="css/style-xlarge.css" />
-		</noscript>
+		<script src="{% static 'js/jquery.min.js' %}"></script>
+		<script src="{% static 'js/skel.min.js' %}"></script>
+		<script src="{% static 'js/skel-layers.min.js' %}"></script>
+		<script src="{% static 'js/init.js' %}"></script>
+			<link rel="stylesheet" href="{% static 'css/skel.css' %}" />
+			<link rel="stylesheet" href="{% static 'css/style.css' %}" />
+			<link rel="stylesheet" href="{% static 'css/style-xlarge.css' %}" />
 	</head>
 	<body class="landing">
 
@@ -87,22 +86,22 @@
 					<section class="profiles">
 						<div class="row">
 							<section class="3u 6u(medium) 12u$(xsmall) profile">
-								<img src="images/profile_placeholder.gif" alt="" />
+								<img src="{% static 'images/profile_placeholder.gif' %}" alt="" />
 								<h4>Carl Blacklock</h4>
 								<p>Python/DB Programmer</p>
 							</section>
 							<section class="3u 6u$(medium) 12u$(xsmall) profile">
-								<img src="images/profile_placeholder.gif" alt="" />
+								<img src="{% static 'images/profile_placeholder.gif' %}" alt="" />
 								<h4>Srushti Panda</h4>
 								<p>UI/UX Developer</p>
 							</section>
 							<section class="3u 6u(medium) 12u$(xsmall) profile">
-								<img src="images/profile_placeholder.gif" alt="" />
+								<img src="{% static 'images/profile_placeholder.gif' %}" alt="" />
 								<h4>Heaten Mistry</h4>
 								<p>Python/UI Programmer</p>
 							</section>
 							<section class="3u$ 6u$(medium) 12u$(xsmall) profile">
-								<img src="images/profile_placeholder.gif" alt="" />
+								<img src="{% static 'images/profile_placeholder.gif' %}" alt="" />
 								<h4>Anisha Chowdhury</h4>
 								<p>UX Developer/Designer</p>
 							</section>
