--- a/CodeGoesHere/Budgeter/templates/index.html
+++ b/CodeGoesHere/Budgeter/templates/index.html
@@ -8,7 +8,7 @@
 	<head>
 		{% load static %}
 		<meta charset="UTF-8">
-		<title>Transit by TEMPLATED</title>
+		<title>Welcome to SAV-e</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -37,7 +37,7 @@
 		<!-- Banner -->
 			<section id="banner">
 				<h2>SAV-e</h2>
-				<p>Better way to save electronically</p>
+				<p>A Better way to save electronically</p>
 				<ul class="actions">
 					<li>
 						<a href="#" class="button big">Sign Up</a>
