--- a/CodeGoesHere/Budgeter/templates/index.html
+++ b/CodeGoesHere/Budgeter/templates/index.html
@@ -29,7 +29,7 @@
 				<nav id="nav">
 					<ul>
 						<li><a href="index.html">Home</a></li>
-						<li><a href="#" class="button special">Sign In</a></li>
+						<li><a href="login/" class="button special">Sign In</a></li>
 					</ul>
 				</nav>
 			</header>
