fix more things

--- a/CodeGoesHere/Budgeter/templates/index.html
+++ b/CodeGoesHere/Budgeter/templates/index.html
@@ -17,9 +17,9 @@
 		<script src="{% static 'js/skel.min.js' %}"></script>
 		<script src="{% static 'js/skel-layers.min.js' %}"></script>
 		<script src="{% static 'js/init.js' %}"></script>
-			<link rel="stylesheet" href="{% static 'css/skel.css' %}" />
-			<link rel="stylesheet" href="{% static 'css/style.css' %}" />
-			<link rel="stylesheet" href="{% static 'css/style-xlarge.css' %}" />
+		<link rel="stylesheet" href="{% static 'css/skel.css' %}" />
+		<link rel="stylesheet" href="{% static 'css/style.css' %}" />
+		<link rel="stylesheet" href="{% static 'css/style-xlarge.css' %}" />
 	</head>
 	<body class="landing">
 
@@ -40,7 +40,7 @@
 				<p>A Better way to save electronically</p>
 				<ul class="actions">
 					<li>
-						<a href="#" class="button big">Sign Up</a>
+						<a href="register/" class="button big">Sign Up</a>
 					</li>
 				</ul>
 			</section>
