--- a/CodeGoesHere/Budgeter/templates/Registration/login.html
+++ b/CodeGoesHere/Budgeter/templates/Registration/login.html
@@ -10,7 +10,7 @@
 	<head>
 		{% load static %}
 		<meta charset="UTF-8">
-		<title>Welcome to SAV-e</title>
+		<title>Sign In Page</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -40,11 +40,6 @@
 			<section id="banner">
 				<h2>SAV-e</h2>
 				<p>A Better way to save electronically</p>
-				<ul class="actions">
-					<li>
-						<a href="#" class="button big">Sign Up</a>
-					</li>
-				</ul>
 			</section>
 
 		{% if form.errors %}
