--- a/CodeGoesHere/Budgeter/templates/Registration/login.html
+++ b/CodeGoesHere/Budgeter/templates/Registration/login.html
@@ -30,8 +30,8 @@
 				<h1><a href="index.html"></a></h1>
 				<nav id="nav">
 					<ul>
-						<li><a href="index.html">Home</a></li>
-						<li><a href="login/" class="button special">Sign In</a></li>
+						<li><a href="/">Home</a></li>
+						<li><a href="/login/" class="button special">Sign In</a></li>
 					</ul>
 				</nav>
 			</header>
