--- a/CodeGoesHere/Budgeter/templates/index.html
+++ b/CodeGoesHere/Budgeter/templates/index.html
@@ -28,8 +28,8 @@
 				<h1><a href="index.html"></a></h1>
 				<nav id="nav">
 					<ul>
-						<li><a href="index.html">Home</a></li>
-						<li><a href="login/" class="button special">Sign In</a></li>
+						<li><a href="/">Home</a></li>
+						<li><a href="/login/" class="button special">Sign In</a></li>
 					</ul>
 				</nav>
 			</header>
@@ -40,7 +40,7 @@
 				<p>A Better way to save electronically</p>
 				<ul class="actions">
 					<li>
-						<a href="register/" class="button big">Sign Up</a>
+						<a href="/register/" class="button big">Sign Up</a>
 					</li>
 				</ul>
 			</section>
