--- a/CodeGoesHere/Budgeter/templates/useranalysis.html
+++ b/CodeGoesHere/Budgeter/templates/useranalysis.html
@@ -7,12 +7,11 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<title>SAV-e User Analysis</title>
+		<title>Import Transactions</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
 		<!--[if lte IE 8]><script src="js/html5shiv.js"></script><![endif]-->
-		<script src="js/jquery.min.js"></script>
 		<script src="js/skel.min.js"></script>
 		<script src="js/skel-layers.min.js"></script>
 		<script src="js/init.js"></script>
@@ -38,24 +37,13 @@
 				<div class="container">
 
 					<header class="major">
-						<h2>SAV-e User Analysis</h2>
+						<h2>Transaction History</h2>
 					</header>
-					<form>
-						Bank Name:<br>
-						<input type="text" name="bankname">
-						<br>Estimated Income per month:<br>
-						<input type="text" name="income">
-						<p>Upload your .CSV file here:</p>
+					<form action="" method="post">
+    				{% csrf_token %}
+    				{{ form }}
+    				<input type="submit" value="Upload data" />
 					</form>
-					
-					
-					<form method="post" action="file-upload-1.htm" name="submit" enctype="multipart/form-data">
-						<input type="file" name="fileField"><br /><br />
-						<input type="submit" name="submit" value="Submit">
-					</form>	
-
-					
-
 				</div>
 			</section>
 
