--- a/CodeGoesHere/Budgeter/templates/useranalysis.html
+++ b/CodeGoesHere/Budgeter/templates/useranalysis.html
@@ -41,7 +41,7 @@
 					</header>
 					<form action="" method="post">
     				{% csrf_token %}
-    				{{ form }}
+    				{{ form.as_p }}
     				<input type="submit" value="Upload data" />
 					</form>
 				</div>
