--- a/CodeGoesHere/Budgeter/templates/Registration/register.html
+++ b/CodeGoesHere/Budgeter/templates/Registration/register.html
@@ -1,10 +1,119 @@
-{% block title %}Create an account{% endblock %}
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		{% load static %}
+		<meta charset="UTF-8">
+		<title>Sign Up Page</title>
+		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+		<meta name="description" content="" />
+		<meta name="keywords" content="" />
+		<!--[if lte IE 8]><script src="js/html5shiv.js"></script><![endif]-->
+		<script src="{% static 'js/jquery.min.js' %}"></script>
+		<script src="{% static 'js/skel.min.js' %}"></script>
+		<script src="{% static 'js/skel-layers.min.js' %}"></script>
+		<script src="{% static 'js/init.js' %}"></script>
+			<link rel="stylesheet" href="{% static 'css/skel.css' %}" />
+			<link rel="stylesheet" href="{% static 'css/style.css' %}" />
+			<link rel="stylesheet" href="{% static 'css/style-xlarge.css' %}" />
+	</head>
+	<body class="landing">
 
-{% block content %}
-  <h1>Create an account</h1>
+		<!-- Header -->
+			<header id="header">
+				<h1><a href="index.html"></a></h1>
+				<nav id="nav">
+					<ul>
+						<li><a href="/">Home</a></li>
+					</ul>
+			</header>
 
-  <form action="" method="post">{% csrf_token %}
-      {{ form.as_p }}
-      <input type="submit" value="Create the account">
-  </form>
+		<!-- Banner -->
+			<section id="banner">
+				<h2>SAV-e</h2>
+				<p>A Better way to save electronically</p>
+			</section>
+			
+			
+			<!-- Python magic in progress -->
+				{% block content %}
+				<h2>Create an account</h2>
+				<form action="" method="post">{% csrf_token %}
+					{{ form.as_p }}
+					<input type="submit" value="Create the account">
+				</form>
+  
+					<!-- Two -->
+					<section id="two" class="wrapper style2 special">
+						<div class="container">
+							<header class="major">
+								<p>Our team of developers</p>
+							</header>
+							<section class="profiles">
+								<div class="row">
+									<section class="3u 6u(medium) 12u$(xsmall) profile">
+										<img src="{% static 'images/profile_placeholder.gif' %}" alt="" />
+										<h4>Carl Blacklock</h4>
+										<p>Python/DB Programmer</p>
+									</section>
+									<section class="3u 6u$(medium) 12u$(xsmall) profile">
+										<img src="{% static 'images/profile_placeholder.gif' %}" alt="" />
+										<h4>Srushti Panda</h4>
+										<p>UI/UX Developer</p>
+									</section>
+									<section class="3u 6u(medium) 12u$(xsmall) profile">
+										<img src="{% static 'images/profile_placeholder.gif' %}" alt="" />
+										<h4>Heaten Mistry</h4>
+										<p>Python/UI Programmer</p>
+									</section>
+									<section class="3u$ 6u$(medium) 12u$(xsmall) profile">
+										<img src="{% static 'images/profile_placeholder.gif' %}" alt="" />
+										<h4>Anisha Chowdhury</h4>
+										<p>UX Developer/Designer</p>
+									</section>
+									<section class="3u$ 6u$(medium) 12u$(xsmall) profile">
+										<img src="{% static 'images/profile_placeholder.gif' %}" alt="" />
+										<h4>Joy Cao</h4>
+										<p>Python Developer</p>
+									</section>
+								</div>
+							</section>
+						</div>
+				</section>
+			
+			<!-- Footer -->
+			<footer id="footer">
+				<div class="container">
+					<section class="links">
+						<div class="row">
+						</div>
+					</section>
+					<div class="row">
+						<div class="8u 12u$(medium)">
+							<ul class="copyright">
+								<li>&copy; Untitled. All rights reserved.</li>
+								<li>Design: <a href="http://templated.co">TEMPLATED</a></li>
+								<li>Images: <a href="http://unsplash.com">Unsplash</a></li>
+							</ul>
+						</div>
+						<div class="4u$ 12u$(medium)">
+							<ul class="icons">
+								<li>
+									<a class="icon rounded fa-facebook"><span class="label">Facebook</span></a>
+								</li>
+								<li>
+									<a class="icon rounded fa-twitter"><span class="label">Twitter</span></a>
+								</li>
+								<li>
+									<a class="icon rounded fa-google-plus"><span class="label">Google+</span></a>
+								</li>
+								<li>
+									<a class="icon rounded fa-linkedin"><span class="label">LinkedIn</span></a>
+								</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</footer>
+	   </body>
+</html>
 {% endblock %}
