--- a/CodeGoesHere/Budgeter/templates/Registration/login.html
+++ b/CodeGoesHere/Budgeter/templates/Registration/login.html
@@ -30,10 +30,7 @@
 				<h1><a href="index.html"></a></h1>
 				<nav id="nav">
 					<ul>
-						<li><a href="index.html">Home</a></li>
 						<li><a href="/">Home</a></li>
-						<li><a href="/login/" class="button special">Sign In</a></li>
-
 					</ul>
 				</nav>
 			</header>
@@ -43,6 +40,8 @@
 				<h2>SAV-e</h2>
 				<p>A Better way to save electronically</p>
 			</section>
+			
+			<!-- Python magic in progress -->
 
 		{% if form.errors %}
 			<p>Your username and password didn't match. Please try again.</p>
@@ -137,7 +136,6 @@
 					</div>
 				</div>
 			</footer>
-
 	</body>
 </html>
 
