--- a/CodeGoesHere/Budgeter/templates/spendanalysis.html
+++ b/CodeGoesHere/Budgeter/templates/spendanalysis.html
@@ -25,6 +25,16 @@
             <link rel="stylesheet" href="{% static 'css/style-xlarge.css' %}" />
     </head>
     <body class="landing">
+    <!-- Header -->
+            <header id="header">
+                <h1><a href="index.html"></a></h1>
+                <nav id="nav">
+                    <ul>
+                        <li><a href="/">Home</a></li>
+                    </ul>
+                </nav>
+            </header>
+            
     <p>Redirecting</p>
         <!-- Header -->
             <header id="header">
