--- a/CodeGoesHere/Budgeter/templates/spendanalysis.html
+++ b/CodeGoesHere/Budgeter/templates/spendanalysis.html
@@ -34,6 +34,11 @@
                     </ul>
                 </nav>
             </header>
+            <!-- Banner -->
+			<section id="banner">
+				<h2>SAV-e</h2>
+				<p>A Better way to save electronically</p>
+			</section>
             
     <p>Redirecting</p>
         <!-- Header -->
