--- a/CodeGoesHere/Budgeter/templates/index.html
+++ b/CodeGoesHere/Budgeter/templates/index.html
@@ -8,7 +8,7 @@
 	<head>
 		{% load static %}
 		<meta charset="UTF-8">
-		<title>Savings Page</title>
+		<title>Welcome to SAV-e</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
