--- a/CodeGoesHere/Budgeter/templates/savings.html
+++ b/CodeGoesHere/Budgeter/templates/savings.html
@@ -40,45 +40,29 @@
 				<h2>SAV-e</h2>
 				<p>A Better way to save electronically</p>
 			</section>
-			
-			<!--One -->
-			
-			
-			
-		<!-- Two -->
-			<section id="two" class="wrapper style2 special">
-				<div class="container">
-					<header class="major">
-						<p>Our team of developers</p>
-					</header>
-					<section class="profiles">
-						<div class="row">
-							<section class="3u 6u(medium) 12u$(xsmall) profile">
-								
-								<h4>Carl Blacklock</h4>
-								<p>Python/DB Programmer</p>
-							</section>
-							<section class="3u 6u$(medium) 12u$(xsmall) profile">
-								
-								<h4>Srushti Panda</h4>
-								<p>UI/UX Developer</p>
-							</section>
-							<section class="3u 6u(medium) 12u$(xsmall) profile">
-								
-								<h4>Heaten Mistry</h4>
-								<p>Python/UI Programmer</p>
-							</section>
-							<section class="3u$ 6u$(medium) 12u$(xsmall) profile">
-								
-								<h4>Anisha Chowdhury</h4>
-								<p>UX Developer/Designer</p>
-							</section>
-						</div>
-					</section>
-				</div>
-			</section>
 
-		
+		<p align="center">
+		<img src=".\img\image.png" height="400" width="500"><br/>
+
+		Total Savings = $247.99<br/><br/>
+		How much would you want to save for the following?<br/>
+		Fast Food 			<input type="text"><br/>
+		Beverages			<input type="text"><br/>
+		Alcohol	  			<input type="text"><br/>
+		Grocery/Essentials	<input type="text"><br/>
+		Bills				<input type="text"><br/>
+		Fashion				<input type="text"><br/>
+		Electronics			<input type="text"><br/>
+		Miscellaneous		<input type="text"><br/>
+		Online Purchases	<input type="text"><br/>
+		<br/>
+		Where do you want to allocate your savings?<br/>
+		<button type="button">Bill Payment</button><button type="button">Mortgage</button><button type="button">TFSA</button><button type="button">RESP</button><button type="button">RRSP</button>
+
+
+
+		</p>
+
 		<!-- Footer -->
 			<footer id="footer">
 				<div class="container">
