--- a/CodeGoesHere/Budgeter/templates/savings.html
+++ b/CodeGoesHere/Budgeter/templates/savings.html
@@ -42,7 +42,8 @@
 			</section>
 
 		<p align="center">
-		<img src=".\img\image.png" height="400" width="500"><br/>
+		<img src="{% static 'image.png' %}" height="400" width="500"/>
+		<br/>
 
 		Total Savings = $247.99<br/><br/>
 		How much would you want to save for the following?<br/>
